# caixa

./: .env.example  .gitattributes  .gitignore  README.md  README_DASHBOARD_V2.md  README_DASHBOARD_V3.md  README_STRATEGY_PACKAGE.md  pyproject.toml  requirements-dashboard.txt  run_processing_after_scrape.sh
.streamlit/: config.toml
data/exports/: analise.xlsx  catalogo_vitrine_merged.xlsx  current_all_active_opportunities.xlsx  current_all_active_opportunities_20g_plus.xlsx  history_sp_clean_ouro.xlsx  opportunities.xlsx  opportunities_986.xlsx  opportunities_all.xlsx  opportunities_hidden_ouro.xlsx  opportunities_ouro_moeda_clean.xlsx  opportunities_sp_pedroso_1k_35k.xlsx  resultados_all_2025_analysis.xlsx  resultados_sp_analysis.xlsx  resultados_sp_analysis_cli.xlsx  resultados_sp_analysis_keyed.xlsx  test_cli_opportunities.xlsx
data/processed/: catalogo.csv  current_all_active_catalog_lots.csv  current_all_active_catalog_parse_summary.csv  history_sp_full_catalog_lots.csv  history_sp_full_catalog_lots_dedup.csv  history_sp_full_catalog_parse_summary.csv  history_sp_full_catalogo_only_clean.csv  history_sp_full_pdf_inventory.csv  resultados_sp_buyers_summary.csv  resultados_sp_lances.csv  resultados_sp_lances_merged_catalog.csv  resultados_sp_lances_merged_catalog_keyed.csv  resultados_sp_pdf_inventory.csv  (+1 more)
scripts/: install_dashboard_v2.py  install_dashboard_v3.py  install_strategy_package.py  rebuild_dashboard_v3.sh
src/caixa_joias/: cli.py  (+1 more)
tests/: test_classify_lot.py  test_current_file_map_enrichment.py  test_resultados_json_metadata_enrichment.py
(+175 files in other folders)
