[project]
name = "caixa-joias"
version = "0.1.0"
description = "CAIXA jewelry auction scraper/parser and analysis toolkit"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "playwright>=1.44.0"
]

[project.scripts]
caixa-joias = "caixa_joias.cli:app"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
